--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ node_modules/
 .vercel/
 .env*
 .env.*
+# Allow .env.example files to be committed (templates)
+!.env*.example
 .DS_Store
 npm-debug.log*
 yarn-error.log
