--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.1.1",
     "framer-motion": "^11.13.1",
     "gsap": "^3.13.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
     "next": "^15.1.3",
     "next-themes": "^0.4.6",
@@ -55,7 +56,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
