--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.13.1",
     "gsap": "^3.13.0",
     "jszip": "^3.10.1",
